# detection_demo

./: .gitignore  CoinDetection.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
