[tool.poetry]
name = "detection"
version = "0.1.0"
description = ""
authors = ["iron316 <shunta316iron@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.10"
jupyter = "^1.0.0"
numpy = "^1.21.0"
pandas = "^1.2.5"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
opencv-python = "^4.5.2"
pyyaml = "5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
